2009-11-28  Jacek Antonelli  <jacek.antonelli@gmail.com>

	* Merged in new object backup as HPA implementation.
	  HPA feature by Patrick Sapinski, based on Emerald's backup.

	  modified:   linden/indra/llxml/llxmlnode.cpp
	  modified:   linden/indra/newview/CMakeLists.txt
	  modified:   linden/indra/newview/app_settings/settings.xml
	  new file:   linden/indra/newview/chatbar_as_cmdline.cpp
	  new file:   linden/indra/newview/chatbar_as_cmdline.h
	  new file:   linden/indra/newview/exporttracker.cpp
	  new file:   linden/indra/newview/exporttracker.h
	  new file:   linden/indra/newview/importtracker.cpp
	  new file:   linden/indra/newview/importtracker.h
	  modified:   linden/indra/newview/llfilepicker.cpp
	  modified:   linden/indra/newview/llfilepicker.h
	  modified:   linden/indra/newview/llstartup.cpp
	  modified:   linden/indra/newview/llviewermenu.cpp
	  modified:   linden/indra/newview/llviewermenufile.cpp
	  modified:   linden/indra/newview/llviewerobjectlist.cpp
	  modified:   linden/indra/newview/llwearable.h
	  deleted:    linden/indra/newview/primbackup.cpp
	  deleted:    linden/indra/newview/primbackup.h
	  new file:   linden/indra/newview/skins/default/xui/en-us/floater_prim_export.xml
	  modified:   linden/indra/newview/skins/default/xui/en-us/floater_prim_import.xml
	  modified:   linden/indra/newview/skins/default/xui/en-us/menu_pie_object.xml
	  modified:   linden/indra/newview/skins/default/xui/en-us/menu_viewer.xml


	* Downgraded Linux boost to 1.36.0.

	  modified:   linden/install.xml


2009-11-27  Jacek Antonelli  <jacek.antonelli@gmail.com>

	* 'FALSE' is supposed to be 'OFF' in develop.py.

	  modified:   linden/indra/develop.py


2009-11-26  Jacek Antonelli  <jacek.antonelli@gmail.com>

	* Reverted "Updated primbackup from latest meerkat svn (r246)"

	  modified:   newview/primbackup.cpp
	  modified:   newview/primbackup.h


2009-11-25 McCabe Maxsted  <hakushakukun@gmail.com>

	* Updated windows zlib (to 1.2.3) and boost libs (to 1.36).